fix textarea text overlap icon #2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -112,7 +112,7 @@
     }
 
     textarea{
-        padding-inline-start: 40px;
+        padding-inline-start: 30px;
     }
 
     .icon-image {
